migrate to httpclient5 (#391)